--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,19 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
+      - graphql-network
+
+  postgres:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: university_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+    ports:
+      - "5432:5432"
     networks:
       - graphql-network
 
