--- a/university-subgraph/university/src/main/resources/application.properties
+++ b/university-subgraph/university/src/main/resources/application.properties
@@ -1,5 +1,15 @@
+
 spring.application.name=university
 
 spring.graphql.graphiql.enabled=true
 logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
+spring.datasource.username=postgres
+spring.datasource.password=secret
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
