--- a/university-subgraph/university/src/main/resources/application.properties
+++ b/university-subgraph/university/src/main/resources/application.properties
@@ -5,7 +5,12 @@ spring.graphql.graphiql.enabled=true
 logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
 
+#When working on docker-compose environment
 spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
+
+#When working on localhost
+#spring.datasource.url=jdbc:postgresql://localhost:5432/university_db
+
 spring.datasource.username=postgres
 spring.datasource.password=secret
 
@@ -13,3 +18,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+spring.graphql.exception-handlers.enabled=true
