--- a/university-subgraph/university/src/main/resources/application.properties
+++ b/university-subgraph/university/src/main/resources/application.properties
@@ -6,16 +6,18 @@ logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
 
 #When working on docker-compose environment
-spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
+#spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
 
 #When working on localhost
-#spring.datasource.url=jdbc:postgresql://localhost:5432/university_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/university_db
 
 spring.datasource.username=postgres
 spring.datasource.password=secret
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 spring.graphql.exception-handlers.enabled=true
+
+logging.level.com.subgraph.university=DEBUG
