--- a/university-subgraph/university/src/main/resources/application.properties
+++ b/university-subgraph/university/src/main/resources/application.properties
@@ -6,10 +6,10 @@ logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
 
 #When working on docker-compose environment
-#spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
 
 #When working on localhost
-spring.datasource.url=jdbc:postgresql://localhost:5432/university_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/university_db
 
 spring.datasource.username=postgres
 spring.datasource.password=secret
