--- a/university-subgraph/university/src/main/resources/application.properties
+++ b/university-subgraph/university/src/main/resources/application.properties
@@ -14,10 +14,12 @@ spring.datasource.url=jdbc:postgresql://postgres:5432/university_db
 spring.datasource.username=postgres
 spring.datasource.password=secret
 
+# Disables automatic schema creation by Hibernate, relying on Flyway.
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+# Enables custom exception handling for GraphQL errors.
 spring.graphql.exception-handlers.enabled=true
 
 logging.level.com.subgraph.university=DEBUG
