--- a/students-subgraph/students/src/main/resources/application.properties
+++ b/students-subgraph/students/src/main/resources/application.properties
@@ -4,3 +4,9 @@ server.port=8081
 spring.graphql.graphiql.enabled=true
 logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
+
+# When using docker-compose environment
+grades.service.base-url=http://grades:8084/grades
+
+# When not using docker-compose environment
+# grades.service.base-url=http://localhost:8084/grades
