--- a/students-subgraph/students/src/main/resources/application.properties
+++ b/students-subgraph/students/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=students
 
 server.port=8081
 spring.graphql.graphiql.enabled=true
+spring.graphql.websocket.path=/graphql
+spring.graphql.websocket.connection-init-timeout=60s
 logging.level.org.springframework.graphql=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
 management.metrics.enable.system=false
 
 # When using docker-compose environment
