--- a/teachers-subgraph/teachers/src/main/resources/application.properties
+++ b/teachers-subgraph/teachers/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8082
 spring.graphql.graphiql.enabled=true
 logging.level.org.springframework.graphql=DEBUG
 management.metrics.enable.system=false
+logging.level.com.subgraph.teachers.directive=TRACE
