--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,6 +62,23 @@ services:
     depends_on:
         - classes # Add dependency
 
+  student-dashboard:
+    build:
+      context: ./frontend-service  # This should be the root directory (Federated_graphql_app)
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    networks:
+      - graphql-network
+    volumes:
+      - ./frontend-service/student-dashboard:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_GRAPHQL_URI=http://router:4000/graphql
+    depends_on:
+      - students
+
   rover:
     image: ubuntu:20.04
     command: >
